--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transport">#00FFFFFF</color>
+
+    <color name="green_200">#ffa5d6a7</color>
+    <color name="green_500">#ff4caf50</color>
+    <color name="green_700">#ff388e3c</color>
+    <color name="purple">#FF833AB4</color>
 </resources>
